Fix menu spacing in footer.

--- a/sass/footer.sass
+++ b/sass/footer.sass
@@ -27,8 +27,10 @@
     order: 1
     grid-column: 1
 
-  li.menu-item-no-children:last-of-type
+  .last-without-children,
+  .menu-item-no-children:last-child
     margin-bottom: 20px
+
 
   .menu-item-has-children
     order: 2
